# AI-Creator

./: .gitignore  LICENSE  README_ZH.md  demos_documents.md  main_agent.py  main_idea2video.py  main_script2video.py  pyproject.toml  readme.md  readme_legacy.md  vimax
agent_runtime/: context_compactor.py  llm.py  loop.py  models.py  prompts.py  session_index.py  tools.py  vimax_adapters.py
agents/: camera_image_generator.py  character_portraits_generator.py  event_extractor.py  reference_image_selector.py  screenwriter.py  script_enhancer.py  script_planner.py  storyboard_artist.py
configs/: agent.local.yaml  idea2script.yaml  idea2video.yaml  idea2video_minimax.yaml  novel2movie.yaml  script2video.yaml  script2video_minimax.yaml
interfaces/: shot_description.py  video_output.py
pipelines/: idea2video_pipeline.py  novel2movie_pipeline.py  script2video_pipeline.py
prompts/: workflow.md
test/: camera_image_generator_test.py  image_generator_test.py  next_shot_designer_test.py  screenwriter_test.py  storyboard_artist_test.py  storyboard_generator_agent_test.py  video_generator_test.py
tests/: test_agent_config.py  test_agent_llm.py  test_agent_loop.py  test_agent_prompt_builder.py  test_agent_session_index.py  test_agent_tools.py  test_crash_regressions.py  test_generator_protocol.py  test_hang_guards.py  test_hygiene_guards.py  test_image_orientation.py  test_image_response.py  test_main_agent_cli.py  test_minimax_integration.py  test_novel2video_adapter.py  test_openrouter_image_generator.py  test_openrouter_video_generator.py  test_robustness.py  (+3 more)
(+98 files in other folders)
